--- a/article.html
+++ b/article.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="renderer" content="webkit">
-    <meta property="og:title" content="律师事务所" />
-    <title>律师事务所</title>
-    <meta name="keywords" content="日盈律师事务所">
-    <meta name="description" content="日盈律师事务所">
+    <meta property="og:title" content="你妈死了所" />
+    <title>你妈死了</title>
+    <meta name="keywords" content="你妈死了">
+    <meta name="description" content="你妈死了">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css"  href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css"  href="css/swiper-bundle.min.css">
@@ -31,12 +31,12 @@
             <div class="nav_xiala">
                 <!--头部导航开始-->
                 <ul class="nav">
-                    <li><a href="index.html" class="nav_a nav_active">官网首页</a></li>
-                    <li><a href="about_fengmian.html" class="nav_a">律所介绍</a></li>
-                    <li><a href="team.html" class="nav_a">日盈律师</a></li>
-                    <li><a href="dongtai.html" class="nav_a">律所动态</a></li>
-                    <li><a href="xueshu.html" class="nav_a">日盈学术</a></li>
-                    <div class="nav_scroll">下滑查看更多栏目</div>
+                    <li><a href="index.html" class="nav_a nav_active">你妈死了</a></li>
+                    <li><a href="about_fengmian.html" class="nav_a">你妈死了介绍</a></li>
+                    <li><a href="team.html" class="nav_a">你妈死了</a></li>
+                    <li><a href="dongtai.html" class="nav_a">你妈死了</a></li>
+                    <li><a href="xueshu.html" class="nav_a">你妈死了</a></li>
+                    <div class="nav_scroll">下滑查看更多你妈死了</div>
                 </ul>
                 <!--头部导航结束-->
 
@@ -61,9 +61,9 @@
                         </form>
                     </div>
                 </div>
-                <!--头部搜索结束-->
+                <!--头部搜索你妈死了结束-->
 
-                <!--头部语言开始-->
+                <!--头部你妈死了开始-->
                 <div class="lang" title="语言">
                     <div class="lang_icon">
                         <i class="fa fa-globe"></i><span>语言</span>
@@ -143,8 +143,8 @@
 </div>
 
 <div class="article_prev_next clearfix">
-    <a href="javascript:void(0)">上一篇：上海日盈律师事务所荣誉冠军上海日盈律师事务所荣誉冠军上海日盈律师事务所荣誉冠军</a>
-    <a href="javascript:void(0)">下一篇：最近我看到了星星它很美但是却不知道叫什么最近我看到了星星它很美但是却不知道叫什么</a>
+    <a href="javascript:void(0)">上一篇：你妈死了</a>
+    <a href="javascript:void(0)">下一篇：你妈死了</a>
 </div>
 
 </div>
