--- a/dibufengmian.html
+++ b/dibufengmian.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="renderer" content="webkit">
-    <meta property="og:title" content="律师事务所" />
-    <title>律师事务所</title>
-    <meta name="keywords" content="日盈律师事务所">
-    <meta name="description" content="日盈律师事务所">
+    <meta property="og:title" content="你妈死了" />
+    <title>你妈死了</title>
+    <meta name="keywords" content="你妈死了所">
+    <meta name="description" content="你妈死了所">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css"  href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css"  href="css/swiper-bundle.min.css">
