--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 <a href="product.html" class="nav-item nav-link">Product</a>
 </div>
 <a href="index1.html" class="navbar-brand mx-5 d-none d-lg-block">
-<h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
+<h1 class="m-0 display-4 text-primary"><span class="text-secondary">音源</span>网站</h1>
  </a>
 <div class="navbar-nav mr-auto py-0">
 <a href="service.html" class="nav-item nav-link">Service</a>
@@ -88,7 +88,7 @@
 
 <div class="jumbotron jumbotron-fluid page-header" style="margin-bottom: 90px;">
 <div class="container text-center py-5">
-<h1 class="text-white display-3 mt-lg-5">About</h1>
+<h1 class="text-white display-3 mt-lg-5">亲爱的用户</h1>
 <div class="d-inline-flex align-items-center text-white">
 <p class="m-0"><a class="text-white" href="">Home</a></p>
 <i class="fa fa-circle px-3"></i>
@@ -113,9 +113,7 @@
 <a href="" class="btn btn-secondary mt-2">Learn More</a>
 </div>
 <div class="col-lg-4" style="min-height: 400px;">
-<div class="position-relative h-100 rounded overflow-hidden">
-<img class="position-absolute w-100 h-100" src="static/picture/about.jpg" style="object-fit: cover;">
-</div>
+<div class="position-relative h-100 rounded overflow-hidden 却认为"> </div>
 </div>
 <div class="col-lg-4 py-5">
 <h4 class="font-weight-bold mb-3">Our Features</h4>
@@ -146,7 +144,8 @@
 <img class="rounded-circle w-100 h-100" src="static/picture/team-1.jpg" style="object-fit: cover;">
 </div>
 <div class="position-relative text-center bg-light rounded px-4 py-5" style="margin-top: -100px;">
-<h3 class="font-weight-bold mt-5 mb-3 pt-5">Full Name</h3>
+  <h3 class="font-weight-bold mt-5 mb-3 pt-5"> 王昱宁</h3>
+  
 <h6 class="text-uppercase text-muted mb-4">Designation</h6>
 <div class="d-flex justify-content-center pt-1">
 <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
