--- a/index1.html
+++ b/index1.html
@@ -60,7 +60,7 @@
 <div class="container-fluid position-relative nav-bar p-0">
 <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
-<a href="" class="navbar-brand d-block d-lg-none">
+<a href="index1.html" class="navbar-brand d-block d-lg-none">
 <h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
 </a>
 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -68,12 +68,12 @@
 </button>
 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 <div class="navbar-nav ml-auto py-0">
-<a href="" class="nav-item nav-link active">Home</a>
+<a href="index1.html" class="nav-item nav-link active">Home</a>
 <a href="about.html" class="nav-item nav-link">About</a>
 <a href="product.html" class="nav-item nav-link">Product</a>
 </div>
-<a href="" class="navbar-brand mx-5 d-none d-lg-block">
-<h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
+<a href="index1.html" class="navbar-brand mx-5 d-none d-lg-block">
+<h1 class="m-0 display-4 text-primary"><span class="text-secondary">音源</span>网站</h1>
  </a>
 <div class="navbar-nav mr-auto py-0">
 <a href="service.html" class="nav-item nav-link">Service</a>
@@ -93,9 +93,9 @@
 <img class="w-100" src="static/picture/carousel-1.jpg" alt="Image">
 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 <div class="p-3" style="max-width: 900px;">
-<h4 class="text-white text-uppercase mb-md-3">Traditional & Delicious</h4>
-<h1 class="display-3 text-white mb-md-4">Traditional Ice Cream Since 1950</h1>
-<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
+<h4 class="text-white text-uppercase mb-md-3">根据 & 史料记载</h4>
+<h1 class="display-3 text-white mb-md-4">王昱宁是你爹</h1>
+<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">叫王昱宁一声爸爸</a>
 </div>
 </div>
 </div>
@@ -103,9 +103,9 @@
 <img class="w-100" src="static/picture/carousel-2.jpg" alt="Image">
 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 <div class="p-3" style="max-width: 900px;">
-<h4 class="text-white text-uppercase mb-md-3">Traditional & Delicious</h4>
-<h1 class="display-3 text-white mb-md-4">Made From Our Own Organic Milk</h1>
-<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
+<h4 class="text-white text-uppercase mb-md-3">根据 & 史料记载</h4>
+<h1 class="display-3 text-white mb-md-4">王昱宁是你的亲爹</h1>
+<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">叫王昱宁两声爸爸</a>
 </div>
 </div>
 </div>
@@ -128,15 +128,15 @@
 <div class="container py-5">
 <div class="row justify-content-center">
 <div class="col-lg-7">
-<h1 class="section-title position-relative text-center mb-5">Traditional & Delicious Ice Cream Since 1950</h1>
+<h1 class="section-title position-relative text-center mb-5">遗传学认定&nbsp;</h1>
 </div>
 </div>
 <div class="row">
 <div class="col-lg-4 py-5">
-<h4 class="font-weight-bold mb-3">About Us</h4>
+<h4 class="font-weight-bold mb-3">根据我们鉴定&nbsp;</h4>
 <h5 class="text-muted mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea</h5>
 <p>Takimata sed vero vero no sit sed, justo clita duo no duo amet et, nonumy kasd sed dolor eos diam lorem eirmod. Amet sit amet amet no. Est nonumy sed labore eirmod sit magna. Erat at est justo sit ut. Labor diam sed ipsum et eirmod</p>
-<a href="" class="btn btn-secondary mt-2">Learn More</a>
+<a href="" class="btn btn-secondary mt-2">关于更多&nbsp;</a>
 </div>
 <div class="col-lg-4" style="min-height: 400px;">
 <div class="position-relative h-100 rounded overflow-hidden">
@@ -144,12 +144,12 @@
 </div>
 </div>
  <div class="col-lg-4 py-5">
-<h4 class="font-weight-bold mb-3">Our Features</h4>
+<h4 class="font-weight-bold mb-3">我们的笃信</h4>
 <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
 <h5 class="text-muted mb-3"><i class="fa fa-check text-secondary mr-3"></i>Eos kasd eos dolor</h5>
 <h5 class="text-muted mb-3"><i class="fa fa-check text-secondary mr-3"></i>Eos kasd eos dolor</h5>
 <h5 class="text-muted mb-3"><i class="fa fa-check text-secondary mr-3"></i>Eos kasd eos dolor</h5>
-<a href="" class="btn btn-primary mt-2">Learn More</a>
+<a href="" class="btn btn-primary mt-2">关于更多&nbsp;</a>
 </div>
 </div>
 </div>
@@ -214,7 +214,7 @@ justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
 <img class="rounded-circle w-100 h-100 bg-light p-3" src="static/picture/service-1.jpg" style="object-fit: cover;">
 </div>
 <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-<h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Quality Maintain</h5>
+<h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">你的父亲&nbsp;</h5>
 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
 <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
 </div>
@@ -224,7 +224,7 @@ justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
 <img class="rounded-circle w-100 h-100 bg-light p-3" src="static/picture/service-2.jpg" style="object-fit: cover;">
 </div>
 <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-<h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Individual Approach</h5>
+<h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">你的母亲</h5>
 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
 <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
 </div>
@@ -234,7 +234,7 @@ justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
 <img class="rounded-circle w-100 h-100 bg-light p-3" src="static/picture/service-3.jpg" style="object-fit: cover;">
 </div>
 <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-<h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Celebration Ice Cream</h5>
+<h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">你爹</h5>
 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
 <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
 </div>
@@ -499,7 +499,7 @@ justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
 <div class="container text-center py-5">
 <div class="row">
 <div class="col-12 mb-4">
-<a href="" class="navbar-brand m-0">
+<a href="index1.html" class="navbar-brand m-0">
 <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
 </a>
 </div>
@@ -534,17 +534,18 @@ justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
 
 <a href="#" class="btn btn-secondary px-2 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-<script src="static/js/jquery-3.4.1.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/bootstrap.bundle.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/easing.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/waypoints.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/owl.carousel.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/isotope.pkgd.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/lightbox.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
+<script src="static/js/jquery-3.4.1.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/bootstrap.bundle.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/easing.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/waypoints.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/owl.carousel.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/isotope.pkgd.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/lightbox.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
 
-<script src="static/js/jqBootstrapValidation.min.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/contact.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
+<script src="static/js/jqBootstrapValidation.min.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/contact.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
 
-<script src="static/js/main.js" type="229fc1218b9458e09b363e10-text/javascript"></script>
-<script src="static/js/rocket-loader.min.js" data-cf-settings="229fc1218b9458e09b363e10-|49" defer=""></script></body>
+<script src="static/js/main.js" type="08f7b3df4f5044f6157edfd4-text/javascript"></script>
+<script src="static/js/rocket-loader.min.js" data-cf-settings="08f7b3df4f5044f6157edfd4-|49" defer=""></script>	<a href=#" style="display:none;"></a>
+</body>
 </html>
