--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 <div id="header-carousel" class="carousel slide" data-ride="carousel">
 <div class="carousel-inner">
 <div class="carousel-item active">
-<img class="w-100" src="static/picture/carousel-1.jpg" alt="Image">
+<img class="w-100" src="C:\Users\Administrator\Videos\Captures" alt="Image">
 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 <div class="p-3" style="max-width: 900px;">
 <h4 class="text-white text-uppercase mb-md-3">根据 & 史料记载</h4>
-<h1 class="display-3 text-white mb-md-4">王昱宁是你爹</h1>
-<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">叫王昱宁一声爸爸</a>
+<h1 class="display-3 text-white mb-md-4">我是你爹</h1>
+<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">叫我一声爸爸</a>
 </div>
 </div>
 </div>
@@ -104,8 +104,8 @@
 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 <div class="p-3" style="max-width: 900px;">
 <h4 class="text-white text-uppercase mb-md-3">根据 & 史料记载</h4>
-<h1 class="display-3 text-white mb-md-4">王昱宁是你的亲爹</h1>
-<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">叫王昱宁两声爸爸</a>
+<h1 class="display-3 text-white mb-md-4">我是你的亲爹</h1>
+<a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">叫我两声爸爸</a>
 </div>
 </div>
 </div>
